[package]
name = "spinning_cube"
version = "0.1.0"
edition = "2021"
authors = ["Guilherme Pagano <guilhermebpagano@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
rand = "0.8.5"
terminal_size = "0.2.6"
